tests/ui/no_generics.stderr
error: derive-where doesn't support items without generics, as this can already be handled by standard `#[derive()]`
 --> tests/ui/no_generics.rs:2:1
  |
2 | struct Test1(u8);
  | ^^^^^^^^^^^^^^^^^

error: derive-where doesn't support items without generics, as this can already be handled by standard `#[derive()]`
 --> tests/ui/no_generics.rs:5:1
  |
5 | enum Test2 { A }
  | ^^^^^^^^^^^^^^^^

error: derive-where doesn't support items without generics, as this can already be handled by standard `#[derive()]`
  --> tests/ui/no_generics.rs:10:1
   |
10 | struct Test3();
   | ^^^^^^^^^^^^^^^

error: derive-where doesn't support items without generics, as this can already be handled by standard `#[derive()]`
  --> tests/ui/no_generics.rs:13:1
   |
13 | enum Test4 { }
   | ^^^^^^^^^^^^^^
